spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,7 @@ h6{
 /* Paragraph & Typographic */
 p {
     line-height: 28px;
-    margin-bottom: 0px;
+    margin-bottom: 25px;
     font-size: 16px;
 }
 
